# python-semantic-release

./: .coveragerc  .dockerignore  .flake8  .frigg.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  TEST_FAILURE_GROUPS.md  action.rst  action.sh  action.yml  build.sh  github_output_file  parse_errors.py  poetry.toml  pyproject.toml  readme.rst  requirements.txt  setup.cfg  setup.py  test_results.txt  tox.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  changed-files-spec.yml  copilot-instructions.md  dependabot.yaml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature_request.md  question.md
.github/workflows/: beautify.yml  ci.yml  cicd.yml  main.yml  manual.yml  pr.yml  stale.yml  v8.yaml  validate.yml  verify_upstream.sh
config/release-templates/: .release_notes.md.j2  CHANGELOG.rst.j2
config/release-templates/.components/: changelog_1.0.0.rst.j2  changelog_header.rst.j2  changelog_init.rst.j2  changes.md.j2  changes.rst.j2  macros.common.j2  macros.md.j2  macros.rst.j2  versioned_changes.md.j2  versioned_changes.rst.j2
docs/: Makefile  action.rst  algorithm.rst  automatic-releases.rst  changelog_templates.rst  commands.rst  commit-log-parsing.rst  commit-parsing.rst  commit_parsing.rst  conf.py  configuration.rst  envvars.rst  github-action.rst  index.rst  make.bat  migrating_from_v7.rst  multibranch_releases.rst  readme.rst  strict_mode.rst  troubleshooting.rst
docs/api/: commands.rst  modules.rst  semantic_release.history.rst  semantic_release.rst
docs/automatic-releases/: cronjobs.rst  github-actions.rst  gitlab-ci.rst  index.rst  travis.rst
docs/concepts/: changelog_templates.rst  commit_parsing.rst  getting_started.rst  index.rst  installation.rst  multibranch_releases.rst
docs/configuration/: configuration.rst  index.rst
docs/configuration/automatic-releases/: cronjobs.rst  github-actions.rst  index.rst  travis.rst
docs/configuration/configuration-guides/: index.rst  monorepos.rst  uv_integration.rst
docs/contributing/: index.rst
docs/upgrading/: 08-upgrade.rst  09-upgrade.rst  10-upgrade.rst  index.rst
requirements/: base.txt  dev.txt  tools.txt
scripts/: build.sh  bump_version_in_docs.py  utils.sh  watch_docs.sh
semantic_release/: __init__.py  __main__.py  artefact.py  ci_checks.py  cli.py  const.py  defaults.cfg  dist.py  enums.py  errors.py  git_helpers.py  helpers.py  history.py  hvcs.py  pre_commit.py  pypi.py  repository.py  settings.py  vcs_helpers.py
semantic_release/changelog/: __init__.py  changelog.py  compare.py  context.py  release_history.py  template.py
semantic_release/cli/: __init__.py  changelog_writer.py  cli_context.py  common.py  config.py  const.py  github_actions_output.py  masking_filter.py  util.py
semantic_release/cli/commands/: __init__.py  changelog.py  cli_context.py  generate_config.py  main.py  publish.py  verify_ci.py  version.py
semantic_release/commit_parser/: __init__.py  _base.py  angular.py  emoji.py  scipy.py  tag.py  token.py  util.py
semantic_release/data/templates/: CHANGELOG.angular.md.j2  CHANGELOG.emoji.md.j2  CHANGELOG.md.j2  CHANGELOG.scipy.md.j2  CHANGELOG.tag.md.j2  release_notes.angular.md.j2  release_notes.emoji.md.j2  release_notes.md.j2  release_notes.scipy.md.j2  release_notes.tag.md.j2
semantic_release/history/: __init__.py  logs.py  parser_angular.py  parser_emoji.py  parser_helpers.py  parser_scipy.py  parser_tag.py
semantic_release/hvcs/: __init__.py  _base.py  bitbucket.py  gitea.py  github.py  gitlab.py  gitlab_ci.py  remote_hvcs_base.py  token_auth.py  util.py
semantic_release/version/: __init__.py  algorithm.py  declaration.py  translator.py  version.py
src/gh_action/: .dockerignore  Dockerfile  action.sh  requirements.txt
src/semantic_release/: __init__.py  __main__.py  const.py  context.py  enums.py  errors.py  gitproject.py  globals.py  helpers.py  operations.py
src/semantic_release/changelog/: context.py  release_history.py  template.py
src/semantic_release/cli/: changelog_writer.py  cli_context.py  config.py  github_actions_output.py  masking_filter.py  util.py
src/semantic_release/commit_parser/: __init__.py  _base.py  angular.py  conventional.py  conventional_monorepo.py  emoji.py  scipy.py  tag.py  token.py  util.py
src/semantic_release/hvcs/: __init__.py  _base.py  bitbucket.py  gitea.py  github.py  gitlab.py  remote_hvcs_base.py  token_auth.py  util.py
src/semantic_release/version/: algorithm.py  declaration.py  translator.py  version.py
tests/: __init__.py  conftest.py  const.py  helper.py  test_changelog.py  test_ci_checks.py  test_cli.py  test_dist.py  test_git_helpers.py  test_helpers.py  test_history.py  test_hvcs.py  test_parsers.py  test_pre_commit.py  test_pypi.py  test_repository.py  test_settings.py  test_setup_py_hook.py  test_tests.py  test_vcs_helpers.py  util.py
tests.old/v7/: test_cli.py  test_vcs_helpers.py
tests.old/v7/ci_checks/: test_bitbucket.py
tests.old/v7/parsers/: test_angular.py  (+2 more)
tests/ci_checks/: test_bitbucket.py  test_checker.py  test_circle.py  test_frigg.py  test_gitlab.py  test_jenkins.py  test_semaphore.py  test_travis.py
tests/command_line/: conftest.py  test_changelog.py  test_generate_config.py  test_help.py  test_main.py  test_publish.py  test_version.py
tests/e2e/: conftest.py  test_help.py  test_main.py
tests/fixtures/: __init__.py  commit_parsers.py  config.py  example_project.py  git_repo.py  scipy.py
tests/gh_action/: run.sh  utils.sh
tests/history/: __init__.py  test_changelog.py  test_markdown_changelog.py  test_version.py  test_version_bump.py
tests/mocks/: __init__.py  mock_gitlab.py
tests/parsers/: conftest.py  test_angular.py  test_emoji.py  test_helpers.py  test_tag.py
tests/scenario/: conftest.py  test_next_version.py  test_release_history.py  test_template_render.py
tests/unit/: __init__.py  conftest.py  test_conftest_repo_cache.py
tests/v7/: test_vcs_helpers.py
(+189 files in other folders)
